@@ -282,9 +282,9 @@ __ZN7WebCore15ContextMenuItem26releasePlatformDescriptionEv
 __ZN7WebCore15FocusController12advanceFocusEPNS_13KeyboardEventE
 __ZN7WebCore15FocusController15setFocusedFrameEN3WTF10PassRefPtrINS_5FrameEEE
 __ZN7WebCore15FocusController18focusedOrMainFrameEv
-__ZN7WebCore15StringTruncator13rightTruncateERKNS_6StringEfRKNS_4FontE
-__ZN7WebCore15StringTruncator14centerTruncateERKNS_6StringEfRKNS_4FontE
-__ZN7WebCore15StringTruncator5widthERKNS_6StringERKNS_4FontE
+__ZN7WebCore15StringTruncator13rightTruncateERKNS_6StringEfRKNS_4FontEb
+__ZN7WebCore15StringTruncator14centerTruncateERKNS_6StringEfRKNS_4FontEb
+__ZN7WebCore15StringTruncator5widthERKNS_6StringERKNS_4FontEb
 __ZN7WebCore16DeprecatedString6appendENS_14DeprecatedCharE
 __ZN7WebCore16DeprecatedString6appendERKS0_
 __ZN7WebCore16DeprecatedString6appendEc
